# django-ninja-oauth2

./: pyproject.toml
ninja_oauth2/: __init__.py  main.py
ninja_oauth2/openapi/: docs.py  urls.py  views.py
ninja_oauth2/security/: oauth2.py
ninja_oauth2/templates/ninja_oauth2/: swagger_cdn.html
tests/: conftest.py  test_openapi.py  test_security.py
tests/demo_project/demo/: settings.py  urls.py
