[project]
name = "django-ninja-oauth2"
version = "0.1.5"
description = "Django Ninja OAuth2 package enables support of OAuth2 / OpenID Connect Authorization Code Flow for your swagger documentation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
homepage = "https://github.com/EomapCompany/django-ninja-oauth2"
repository = "https://github.com/EomapCompany/django-ninja-oauth2"
documentation = "https://github.com/EomapCompany/django-ninja-oauth2#readme"

packages = [
    { include = "ninja_oauth2" }
]

dependencies = [
    "django-ninja>=1.1.0",
    "pyjwt[crypto]>=2.10.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py310"
line-length = 120

lint.select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PTH",  # flake8-use-pathlib
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]